feat:增加沙盒与tool内容